# AutoATES-v2.0

./: README.md  pyproject.toml
PRA/: PRA_AutoATES.py
