[project]
name = "autoates-v2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal==3.10.3",
    "numpy>=2.4.4",
    "rasterio>=1.5.0",
]

[tool.uv.extra-build-dependencies]
gdal = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["PRA*", "FlowPy_detrainment*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
